# wisp

./: .gitattributes  .gitignore  README.md  SECURITY.md  biome.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ftp_cmds.rs  icon_cmds.rs  import_cmds.rs  local_cmds.rs  mod.rs  s3_cmds.rs  sftp_cmds.rs  ssh_cmds.rs  store_cmds.rs  tunnel_cmds.rs  vault_cmds.rs  vnc_cmds.rs
src-tauri/src/ftp/: mod.rs
src-tauri/src/s3/: mod.rs
src-tauri/src/sftp/: mod.rs  transfer.rs
src-tauri/src/ssh/: client.rs  jump.rs  known_hosts.rs  mod.rs  session.rs  ssh_config.rs
src-tauri/src/ssh/fixtures/: id_ed25519_openssh
src-tauri/src/store/: io.rs  mod.rs  model.rs
src-tauri/src/tunnel/: mod.rs  socks.rs
src-tauri/src/vault/: crypto.rs  mod.rs  model.rs
src-tauri/src/vnc/: mod.rs
src-tauri/tests/: stub.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/lib/: format.test.ts  format.ts  ftp.ts  hotkeys.test.ts  hotkeys.ts  icons.ts  ipc.test.ts  ipc.ts  local.ts  profiles.test.ts  profiles.ts  s3.ts  sessionPersist.test.ts  sessionPersist.ts  sftp.test.ts  sftp.ts  ssh.ts  theme.test.ts  theme.ts  transferQueue.ts  transfers.ts  tunnels.ts  updater.ts  urls.ts  vault.ts  vnc.test.ts  vnc.ts
src/stores/: profileStore.test.ts  profileStore.ts  (+9 more)
(+67 files in other folders)
