[package]
name = "wisp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "wisp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wisp"
bench = false

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = "0.10.1"
getrandom = "0.4"
zeroize = { version = "1.9.0", features = ["zeroize_derive"] }
base64 = "0.22"
russh = { version = "0.61.2", default-features = false, features = ["ring", "rsa"] }
russh-sftp = "2.3"
tauri-plugin-dialog = "2"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-util", "time", "net"] }
portable-pty = "0.9.0"
des = "^0.9"
suppaftp = { version = "9", default-features = false, features = ["native-tls"] }
keyring = { version = "4", features = ["v1"] }

[dev-dependencies]
tempfile = "3"
